--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,15 @@
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+using UnityEngine;
+using System.Collections;
 
-# Precompiled Headers
-*.gch
-*.pch
+public class RaycastTest : MonoBehaviour {
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-*.smod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
+	void Update () {
+			Ray ray = Camera.main.ScreenPointToRay(Input.mousePosition);
+			RaycastHit hit;
+			if (Input.GetMouseButton(0) && Physics.Raycast(ray, out hit))
+			{
+				Debug.DrawLine(Camera.main.transform.position, hit.transform.position, Color.red, 0.1f, true);
+				Debug.Log(hit.transform.name);
+		}
+	}
+}
